@@ -1,5 +1,9 @@
 2006-02-01  David Reveman  <davidr@novell.com>
 
+	* hw/xgl/xglglx.h:
+	* hw/xgl/xglglx.c:
+	* hw/xgl/glxext/xglglxext.c: Some GLX code cleanups.
+
 	* hw/xgl/glxext/xglglxlog.c:
 	* hw/xgl/glxext/xglglxext.c: Match _glapi_table in mesa 6.4.1.
 	(xglScreenProbe): __xglScreenInfo -> __xglScreenInfoPtr.
